--- a/src/styles.scss
+++ b/src/styles.scss
@@ -802,7 +802,7 @@ body.dark-theme .link {
 /* ========================
    Responsive
    ======================== */
-@media (min-width: 768px) {
+@media (min-width: 1100px) {
   .wrapper {
     max-width: clamp(280px, 100%, 400px);
   }
@@ -849,6 +849,7 @@ body.dark-theme .link {
   .group-column {
     flex: 1;
   }
+
 }
 
 /* =============================================
